examples/errors/type_errors/E0101_invalid_binary_op.hd
fn main(): void {
    let x = 42;
    let y = "hello";
    let z = x + y;
    return;
}
